# SnapGene_crawler

./: .gitignore  README.md  download_all.py  index.json  index.yaml  main.py  pyproject.toml
.github/workflows/: update.yml
